# Campfire-Engine

./: CMakeLists.txt  README.md
Include/: GameBase.h
Include/CampfireEngine/: Engine.h  GameBase.h
Include/CampfireEngine/Context/: CoreContext.h
Include/CampfireEngine/Context/Subsystems/: AssetsSubsystem.h  ConfigSubsystem.h  RenderSubsystem.h  ShadersSubsystem.h  UISubsystem.h
Include/CampfireEngine/Data/: EngineConfig.h
Include/CampfireEngine/Factories/: ObjectFactories.h
Include/CampfireEngine/Graphics/PostEffect/: PostEffect.h
Include/CampfireEngine/Graphics/Resources/: Font.h  Texture.h
Include/CampfireEngine/Graphics/Shader/: Shader.h  UniformsBlock.h
Include/CampfireEngine/Math/: Math.h
Include/CampfireEngine/Scenes/: Scene.h
Include/CampfireEngine/Sound/: SynthUtils.h  Timbre.h
Include/CampfireEngine/Subsystems/: AssetsSystem.h  PostEffectsSystem.h  RendererSystem.h  ScenesSystem.h  ShadersSystem.h  SynthesizerSystem.h  UIScreensSystem.h
Include/CampfireEngine/Types/: SDLTypesFwd.h  TypesFwd.h
Include/CampfireEngine/UI/Elements/: RegularUIElement.h  UIElement.h  UIImage.h  UIRect.h  UIText.h
Include/CampfireEngine/UI/Screens/: UIScreen.h
Include/CampfireEngine/Utils/: SDLUtils.h
Include/Core/: GameData.h
Include/Graphics/Geometry/: VertexArray.h
Include/Graphics/PostEffect/: FrameBuffer.h  PostEffectsManager.h
Include/Graphics/Renderer/: Drawer.h  Renderer.h
Include/Graphics/Resources/: Texture.h
Include/Graphics/Shader/: Shader.h  ShadersManager.h  UniformsBlock.h
Include/Math/: Random.h
Include/Types/: TypesFwd.h
Include/Utils/: FileUtils.h
Shaders/: Sprites.frag  Sprites.vert
Src/: Engine.cpp  GameBase.cpp
Src/Assets/: AssetsManager.cpp  AssetsManager.h
Src/Core/: GameBase.cpp  GameData.cpp
Src/Data/: EngineConfig.cpp
Src/Factories/: ObjectFactories.cpp
Src/Graphics/Geometry/: VertexArray.cpp
Src/Graphics/PostEffect/: FrameBuffer.cpp  PostEffect.cpp  PostEffectsManager.cpp  PostEffectsManager.h
Src/Graphics/Renderer/: Drawer.cpp  Drawer.h  RenderUtils.h  Renderer.cpp  Renderer.h  RendererUtils.h
Src/Graphics/Resources/: Font.cpp  Texture.cpp
Src/Graphics/Shader/: Shader.cpp  ShadersManager.cpp  ShadersManager.h  UniformsBlock.cpp
Src/Math/: Math.cpp  Random.cpp
Src/Scenes/: ScenesManager.cpp  ScenesManager.h
Src/Sound/: Synthesizer.cpp  Synthesizer.h  Timbre.cpp
Src/UI/: UIManager.cpp  UIManager.h  UIScreensManager.cpp  UIScreensManager.h
Src/UI/Elements/: RegularUIElement.cpp  UIElement.cpp  UIImage.cpp  UIRect.cpp  UIText.cpp
Src/UI/Screens/: UIScreen.cpp
Src/Utils/: FileUtils.cpp  SDLControl.cpp  SDLControl.h  SDLUtils.cpp  SDLUtils.h
include/: TypesFwd.h
include/core/: GameBase.h
include/utils/: SDLUtils.h
src/core/: GameBase.cpp  GameData.cpp
src/utils/: SDLUtils.cpp
